# fault_tolerant_control

./: README.md  dependencies.yaml
ftc_ctrl/: CMakeLists.txt  package.xml
ftc_ctrl/include/ftc_ctrl/: filter.h  ftc_ctrl.h
ftc_ctrl/launch/: test.launch  testSim.launch
ftc_ctrl/parameters/: default.yaml  simulation.yaml
ftc_ctrl/scripts/: reference.sh  set_yaw.sh  start_rotors.sh  stop_rotor.sh  trajectory.sh
ftc_ctrl/src/: filter.cpp  ftc_ctrl.cpp  ftc_ctrl_node.cpp
ftc_state_est/: CMakeLists.txt  package.xml
ftc_state_est/include/ftc_state_est/: state_est_CF.h
ftc_state_est/launch/: testCF.launch  testEKF.launch
ftc_state_est/parameters/: default.yaml
ftc_state_est/src/: state_est_CF.cpp  state_est_node.cpp
quad_msgs/msg/: ControlCommand.msg  QuadReferenceCommand.msg
rotors_interface/: CMakeLists.txt  package.xml
rotors_interface/include/rotors_interface/: rotors_interface.hpp
rotors_interface/src/: rotors_interface.cpp  rotors_interface_node.cpp
vio_estimator/: README.md
vio_estimator/applications/ze_ceres_backend/: CMakeLists.txt
vio_estimator/applications/ze_ceres_backend/src/: estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  landmark_location_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  marginalization_error.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
vio_estimator/applications/ze_vio_ceres/cfg/: vio_base.conf
vio_estimator/applications/ze_vio_ceres/launch/: live_Bluefox.launch
vio_estimator/applications/ze_vio_frontend/: setup.py
vio_estimator/calibration/: Bluefox.yaml  Bluefox25001265.yaml
vio_estimator/common/ze_common/: CMakeLists.txt
vio_estimator/common/ze_imu/: setup.py
(+64 files in other folders)
