<?xml version="1.0"?>
<package format="2">
  <name>ftc_ctrl</name>
  <version>0.0.0</version>
  <description>The ftc_ctrl package</description>

  <maintainer email="sun@ifi.uzh.ch">Sihao Sun</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>quad_msgs</depend>
  <depend>eigen_catkin</depend>

  <export>
    <!-- 
    gazebo_ros_paths_plugin automatically adds these to
    GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
    the package.xml file. You can than use URIs of type model://my_package/stuff.
    -->
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/.."
      gazebo_resource_path="${prefix}/.." /> 
  </export>

</package>
