<?xml version="1.0"?>
<package format="2">
  <name>ftc_state_est</name>
  <version>0.0.0</version>
  <description>The ftc_state_est package</description>

  <maintainer email="sun@ifi.uzh.ch">Sihao Sun</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>quad_msgs</depend>
  <depend>eigen_catkin</depend>

  <export>

  </export>

</package>
